--- a/publications/index.html
+++ b/publications/index.html
@@ -19,20 +19,20 @@
     <ul>
         <li>
             <strong>On Embedding B-Splines in Recursive State Estimation</strong><br>
-            <u>Kailai Li</u><br>
+            Kailai Li<br>
             <em>arXiv preprint</em>, arXiv:2307.00637, 2023 <a href="https://arxiv.org/abs/2307.00637">[arXiv]</a>
         </li>
         <p class="" style="margin: 5px;"></p>
         <li>
             <strong>Hyperspherical Dirac Mixture Reapproximation</strong><br>
-            <u>Kailai Li</u>, Florian Pfaff, Uwe D. Hanebeck<br>
+            Kailai Li, Florian Pfaff, Uwe D. Hanebeck<br>
             <em>arXiv preprint</em> arXiv:2110.10411, 2021 <a href="https://arxiv.org/abs/2110.10411">[arXiv]</a>
         </li>
     </ul>
     <h3 id="thesis"> Dissertation </h3>
     <ul>
         <strong>On-Manifold Recursive Bayesian Estimation for Directional Domains</strong><br>
-        <u>Kailai Li</u>, <em>PhD Thesis, Department of Informatics, Karlsruhe Institute of Technology, December 2021</em> <a href="materials/Dissertation_Kailai_Li.pdf">[PDF]</a><br>
+        Kailai Li, <em>PhD Thesis, Department of Informatics, Karlsruhe Institute of Technology, December 2021</em> <a href="materials/Dissertation_Kailai_Li.pdf">[PDF]</a><br>
         <span style="color:darkviolet;font-weight:bold;">Graded with highest distinction (summa cum laude)</span>
     </ul>
     <h3 id="publications">Peer-Reviewed Publications</h3>
@@ -40,205 +40,205 @@
         <p style="text-decoration:underline;text-decoration-thickness:3px"><strong>2024</strong></p>
         <li>
             <strong>Gaussian Process on the Product of Directional Manifolds</strong><br>
-            Ziyu Cao, <u>Kailai Li</u><br>
+            Ziyu Cao, Kailai Li<br>
             <em>2024 European Control Conference (ECC)</em>, Stockholm, Sweden (to appear) <a href="https://arxiv.org/abs/2303.06799">[arXiv]</a> <a href="https://github.com/KIT-ISAS/hyperToroidalGP">[code]</a>
         </li>
         <p style="text-decoration:underline;text-decoration-thickness:3px"><strong>2023</strong></p>
         <li>
             <strong> Weighted Total Least Squares for Quadratic Errors-in-Variable Regression </strong><br>
-            Peng Liu, <u>Kailai Li</u>, Gustaf Hendeby, Fredrik Gustafsson <br>
+            Peng Liu, Kailai Li, Gustaf Hendeby, Fredrik Gustafsson <br>
             <em>Proceedings of the 2023 31st European Signal Processing Conference (EUSIPCO)</em>, Helsinki, Finland (Accepted) <br>
             <span style="color:darkviolet;font-weight:bold;">Best Student Paper Finalist</span> <a href="http://eusipco2023.org/best_student_paper_contest.html">[link]</a>
         </li>
         <p class="" style="margin: 5px;"></p>
         <li>
             <strong> Continuous-Time Ultra-Wideband-Inertial Fusion </strong><br>
-            <u>Kailai Li</u>, Ziyu Cao, Uwe D Hanebeck <br>
+            Kailai Li, Ziyu Cao, Uwe D Hanebeck <br>
             <em>IEEE Robotics and Automation Letters</em>, vol. 8, no. 7, pp. 4338-4345, July 2023 <a href="https://arxiv.org/abs/2301.09033">[arXiv]</a> <a href="https://doi.org/10.1109/LRA.2023.3281932">[IEEE]</a> <a href="https://www.youtube.com/watch?v=v9bbcskwPnw">[video]</a> <a href="https://github.com/ASIG-X/SFUISE">[code and data]</a>
         </li>
 
         <p style="text-decoration:underline;text-decoration-thickness:3px"><strong>2022</strong></p>
         <li>
             <strong> Optimal Sensor Placement for Multilateration Using Alternating Greedy Removal and Placement </strong><br>
-            Daniel Frisch, <u>Kailai Li</u>, Uwe D Hanebeck <br>
+            Daniel Frisch, Kailai Li, Uwe D Hanebeck <br>
             <em>Proceedings of the 2022 IEEE International Conference on Multisensor Fusion and Integration for Intelligent Systems (MFI)</em>, Cranfield, United Kingdom <a href="https://doi.org/10.1109/MFI55806.2022.9913847">[IEEE]</a>
         </li>
         <p class="" style="margin: 5px;"></p>
         <li>
             <strong>  The State Space Subdivision Filter for SE(3) </strong><br>
-            Florian Pfaff, <u>Kailai Li</u>, Uwe D Hanebeck <br>
+            Florian Pfaff, Kailai Li, Uwe D Hanebeck <br>
             <em>Proceedings of the 2022 25th International Conference on Information Fusion (FUSION)</em>, Linköping, Sweden <a href="https://doi.org/10.23919/FUSION49751.2022.9841384">[IEEE]</a>
         </li>
         <p class="" style="margin: 5px;"></p>
         <li>
             <strong> Circular Discrete Reapproximation </strong><br>
-            <u>Kailai Li</u>, Florian Pfaff, Uwe D. Hanebeck <br>
+            Kailai Li, Florian Pfaff, Uwe D. Hanebeck <br>
             <em>Proceedings of the 2022 25th International Conference on Information Fusion (FUSION)</em>, Linköping, Sweden <a href="https://doi.org/10.23919/FUSION49751.2022.9841269">[IEEE]</a><br>
             <span style="color:darkviolet;font-weight:bold;">Jean-Pierre Le Cadre Best Paper Award First Runner-Up by International Society for Information Fusion (ISIF)</span>
         </li>
         <p style="text-decoration:underline;text-decoration-thickness:3px"><strong>2021</strong></p>
         <li>
             <strong> Conditional Densities and Likelihoods for Hypertoroidal Densities Based on Trigonometric Polynomials </strong><br>
-            Florian Pfaff, <u>Kailai Li</u>, Uwe D. Hanebeck <br>
+            Florian Pfaff, Kailai Li, Uwe D. Hanebeck <br>
             <em>Proceedings of the 2021 IEEE International Conference on Multisensor Fusion and Integration for Intelligent Systems (MFI)</em>, Karlsruhe, Germany <a href="https://doi.org/10.1109/MFI52462.2021.9591160">[IEEE]</a>
         </li>
         <p class="" style="margin: 5px;"></p>
         <li>
             <strong>Deep Likelihood Learning for 2-D Orientation Estimation Using a Fourier Filter </strong><br>
-            Florian Pfaff, <u>Kailai Li</u>, Uwe D. Hanebeck<br>
+            Florian Pfaff, Kailai Li, Uwe D. Hanebeck<br>
             <em>Proceedings of the 24th International Conference on Information Fusion (FUSION)</em>, Sun City, South Africa <a href="https://doi.org/10.23919/FUSION49465.2021.9627032">[IEEE]</a> <a href="https://github.com/KIT-ISAS/FUSION21_2DLikelihoodFromImg">[code]</a>
         </li>
         <p class="" style="margin: 5px;"></p>
         <li>
             <strong>The State Space Subdivision Filter for Estimation on SE(2) </strong><br>
-            Florian Pfaff, <u>Kailai Li</u>, Uwe D. Hanebeck<br>
+            Florian Pfaff, Kailai Li, Uwe D. Hanebeck<br>
             <em>Sensors</em> 2021, 21(18), 6314 <a href="https://doi.org/10.3390/s21186314">[MDPI]</a>
         </li>
         <p class="" style="margin: 5px;"></p>
         <li>
             <strong>Towards High-Performance Solid-State-LiDAR-Inertial Odometry and Mapping </strong><br>
-            <u>Kailai Li</u>, Meng Li, Uwe D. Hanebeck<br>
+            Kailai Li, Meng Li, Uwe D. Hanebeck<br>
             <em>IEEE Robotics and Automation Letters</em>, vol. 6, no. 3, pp. 5167-5174, July 2021 <a href="https://arxiv.org/abs/2010.13150">[arXiv]</a> <a href="https://doi.org/10.1109/LRA.2021.3070251">[IEEE]</a> <a href="https://www.youtube.com/watch?v=c6K5byDCkyE">[video]</a> <a href="https://github.com/KIT-ISAS/lili-om">[code and data]</a>
         </li>
         <p class="" style="margin: 5px;"></p>
         <li>
             <strong>Progressive von Mises–Fisher Filtering Using Isotropic Sample Sets for Nonlinear Hyperspherical Estimation </strong><br>
-            <u>Kailai Li</u>, Florian Pfaff, Uwe D. Hanebeck<br>
+            Kailai Li, Florian Pfaff, Uwe D. Hanebeck<br>
             <em>Sensors 2021, 21(9), 2991</em> [<a href="https://doi.org/10.3390/s21092991">MDPI</a>]
         </li>
         <p class="" style="margin: 5px;"></p>
         <li>
             <strong> Unscented Dual Quaternion Particle Filter for SE(3) Estimation </strong><br>
-            <u>Kailai Li</u>, Florian Pfaff, Uwe D. Hanebeck<br>
+            Kailai Li, Florian Pfaff, Uwe D. Hanebeck<br>
             <em>IEEE Control Systems Letters</em>, vol. 5, no. 2, pp. 647-652, April 2021 &  <em>2020 59th IEEE Conference on Decision and Control (CDC)</em>, Jeju, South Korea <a href="https://doi.org/10.1109/LCSYS.2020.3005066">[IEEE]</a>
         </li>
         <p class="" style="margin: 5px;"></p>
         <p style="text-decoration:underline;text-decoration-thickness:3px"><strong>2020</strong></p>
         <li>
             <strong>Nonlinear von Mises–Fisher Filtering Based on Isotropic Deterministic Sampling </strong><br>
-            <u>Kailai Li</u>, Florian Pfaff, Uwe D. Hanebeck<br>
+            Kailai Li, Florian Pfaff, Uwe D. Hanebeck<br>
             <em>Proceedings of the 2020 IEEE International Conference on Multisensor Fusion and Integration for Intelligent Systems (MFI)</em>, Karlsruhe, Germany <a href="https://doi.org/10.1109/MFI49285.2020.9235260">[IEEE]</a>
         </li>
         <p class="" style="margin:5px;"></p>
         <li>
             <strong>Estimating Correlated Angles Using the Hypertoroidal Grid Filter </strong><br>
-            Florian Pfaff, <u>Kailai Li</u>, Uwe D. Hanebeck<br>
+            Florian Pfaff, Kailai Li, Uwe D. Hanebeck<br>
             <em>Proceedings of the 2020 IEEE International Conference on Multisensor Fusion and Integration for Intelligent Systems (MFI)</em>, Karlsruhe, Germany <a href="https://doi.org/10.1109/MFI49285.2020.9235220">[IEEE]</a>
         </li>
         <p class="" style="margin: 5px;"></p>
         <li>
             <strong>Optimal Reduction of Dirac Mixture Densities on the 2-Sphere </strong><br>
-            Daniel Frisch, <u>Kailai Li</u>, Uwe D. Hanebeck<br>
+            Daniel Frisch, Kailai Li, Uwe D. Hanebeck<br>
             <em>IFAC-PapersOnLine</em>, vol. 53, no. 2, pp. 1282-1287, 2020 & <em>21st IFAC World Congress</em>, Berlin, Germany <a href="https://doi.org/10.1016/j.ifacol.2020.12.1856">[ScienceDirect]</a>
         </li>
         <p class="" style="margin: 5px;"></p>
         <li>
             <strong>The Spherical Grid Filter for Nonlinear Estimation on the Unit Sphere </strong><br>
-            Florian Pfaff, <u>Kailai Li</u>, Uwe D. Hanebeck<br>
+            Florian Pfaff, Kailai Li, Uwe D. Hanebeck<br>
             <em>IFAC-PapersOnLine</em>, vol. 53, no. 2, pp. 2354-2360, 2020 & <em>21st IFAC World Congress</em>, Berlin, Germany <a href="https://doi.org/10.1016/j.ifacol.2020.12.031">[ScienceDirect]</a>
         </li>
         <p class="" style="margin: 5px;"></p>
         <li>
             <strong>Improved Pose Graph Optimization for Planar Motions Using Riemannian Geometry on the Manifold of Dual Quaternions</strong><br>
-            <u>Kailai Li</u>, Johannes Cox, Benjamin Noack, Uwe D. Hanebeck<br>
+            Kailai Li, Johannes Cox, Benjamin Noack, Uwe D. Hanebeck<br>
             <em>IFAC-PapersOnLine</em>, vol. 53, no. 2, pp. 9541-9547, 2020 & <em>21st IFAC World Congress</em>, Berlin, Germany <a href="https://doi.org/10.1016/j.ifacol.2020.12.2432">[ScienceDirect]</a>
         </li>
         <p class="" style="margin: 5px;"></p>
         <li>
             <strong>Hyperspherical Unscented Particle Filter for Nonlinear Orientation Estimation </strong><br>
-            <u>Kailai Li</u>, Florian Pfaff, Uwe D. Hanebeck<br>
+            Kailai Li, Florian Pfaff, Uwe D. Hanebeck<br>
             <em>IFAC-PapersOnLine</em>, vol. 53, no. 2, pp. 2347-2353, 2020 & <em>21st IFAC World Congress</em>, Berlin, Germany <a href="https://doi.org/10.1016/j.ifacol.2020.12.030">[ScienceDirect]</a>
         </li>
         <p class="" style="margin: 5px;"></p>
         <li>
             <strong>Dual Quaternion Sample Reduction for SE(2) Estimation</strong><br>
-            <u>Kailai Li</u>, Florian Pfaff, Uwe D. Hanebeck<br>
+            Kailai Li, Florian Pfaff, Uwe D. Hanebeck<br>
             <em>Proceedings of the 2020 23rd International Conference on Information Fusion (FUSION)</em>, Rustenburg, South Africa <a href="https://doi.org/10.23919/FUSION45008.2020.9190388">[IEEE]</a> <a href="https://www.youtube.com/watch?v=YfZU5ZRUObU">[video]</a>
         </li>
         <p class="" style="margin: 5px;"></p>
         <li>
             <strong> A Hyperhemispherical Grid Filter for Orientation Estimation,</strong><br>
-            Florian Pfaff, <u>Kailai Li</u>, Uwe D. Hanebeck<br>
+            Florian Pfaff, Kailai Li, Uwe D. Hanebeck<br>
             <em>Proceedings of the 2020 23rd International Conference on Information Fusion (FUSION)</em>, Rustenburg, South Africa <a href="https://doi.org/10.23919/FUSION45008.2020.9190611">[IEEE]</a>
         </li>
         <p class="" style="margin: 5px;"></p>
         <li>
             <strong>Highly Parallelizable Plane Extraction for Organized Point Clouds Using Spherical Convex Hulls</strong><br>
-            Hannes Möls, <u>Kailai Li</u>, Uwe D. Hanebeck<br>
+            Hannes Möls, Kailai Li, Uwe D. Hanebeck<br>
             <em>Proceedings of the 2020 IEEE International Conference on Robotics and Automation (ICRA)</em>, Paris, France <a href="https://doi.org/10.1109/ICRA40945.2020.9197139">[IEEE]</a> <a href="https://www.youtube.com/watch?v=S8vSiuNHmAk">[video]</a>
         </li>
         <p class="" style="margin: 5px;"></p>
         <li>
             <strong> Grid-Based Quaternion Filter for SO(3) Estimation</strong><br>
-            <u>Kailai Li</u>, Florian Pfaff, Uwe D. Hanebeck<br>
+            Kailai Li, Florian Pfaff, Uwe D. Hanebeck<br>
             <em>Proceedings of the 2020 European Control Conference (ECC)</em>, St. Petersburg, Russia <a href="https://doi.org/10.23919/ECC51009.2020.9143723">[IEEE]</a>
         </li>
 
         <p style="text-decoration:underline;text-decoration-thickness:3px"><strong>2019</strong></p>
         <li>
             <strong>Stereo Visual SLAM Based on Unscented Dual Quaternion Filtering</strong><br>
-            Simon Bultmann, <u>Kailai Li</u>, Uwe D. Hanebeck<br>
+            Simon Bultmann, Kailai Li, Uwe D. Hanebeck<br>
             <em>Proceedings of the 2019 22nd International Conference on Information Fusion (FUSION)</em>, Ottawa, Canada <a href="https://doi.org/10.23919/FUSION43075.2019.9011391">[IEEE]</a> <a href="https://www.youtube.com/watch?v=kphSawBgbzQ">[video]</a>
         </li>
         <p class="" style="margin: 5px;"></p>
         <li>
             <strong>Hyperspherical Deterministic Sampling Based on Riemannian Geometry for Improved Nonlinear Bingham Filtering</strong><br>
-            <u>Kailai Li</u>, Florian Pfaff, Uwe D. Hanebeck<br>
+            Kailai Li, Florian Pfaff, Uwe D. Hanebeck<br>
             <em>Proceedings of the 2019 22nd International Conference on Information Fusion (FUSION)</em>, Ottawa, Canada <a href="https://doi.org/10.23919/FUSION43075.2019.9011390">[IEEE]</a>
         </li>
         <p class="" style="margin: 5px;"></p>
         <li>
             <strong>Fourier Filters, Grid Filters, and the Fourier-Interpreted Grid Filter</strong><br>
-            Florian Pfaff, <u>Kailai Li</u>, Uwe D. Hanebeck<br>
+            Florian Pfaff, Kailai Li, Uwe D. Hanebeck<br>
             <em>Proceedings of the 2019 22nd International Conference on Information Fusion (FUSION)</em>, Ottawa, Canada <a href="https://doi.org/10.23919/FUSION43075.2019.9011318">[IEEE]</a>
         </li>
         <p class="" style="margin: 5px;"></p>
         <li>
             <strong>Geometry-Driven Deterministic Sampling for Nonlinear Bingham Filtering</strong><br>
-            <u>Kailai Li</u>, Daniel Frisch, Benjamin Noack, Uwe D. Hanebeck<br>
+            Kailai Li, Daniel Frisch, Benjamin Noack, Uwe D. Hanebeck<br>
             <em>Proceedings of the 2019 European Control Conference (ECC)</em>, Naples, Italy <a href="https://doi.org/10.23919/ECC.2019.8796102">[IEEE]</a>
         </li>
         <p class="" style="margin: 5px;"></p>
         <li>
             <strong>Geometry-Driven Stochastic Modeling of SE(3) States Based on Dual Quaternion Representation</strong><br>
-            <u>Kailai Li</u>, Florian Pfaff, Uwe D. Hanebeck<br>
+            Kailai Li, Florian Pfaff, Uwe D. Hanebeck<br>
             <em>Proceedings of the 2019 IEEE International Conference on Industrial Cyber Physical Systems (ICPS)</em>, Taipei, Taiwan <a href="https://doi.org/10.1109/ICPHYS.2019.8780254">[IEEE]</a>
         </li>
         <p class="" style="margin: 5px;"></p>
         <li>
             <strong>Comparative Study of Track-to-Track Fusion Methods for Cooperative Tracking with Bearings-only Measurements</strong><br>
-             Susanne Radtke, <u>Kailai Li</u>, Benjamin Noack, Uwe D. Hanebeck<br>
+             Susanne Radtke, Kailai Li, Benjamin Noack, Uwe D. Hanebeck<br>
             <em>Proceedings of the 2019 IEEE International Conference on Industrial Cyber Physical Systems (ICPS)</em>, Taipei, Taiwan <a href="https://doi.org/10.1109/ICPHYS.2019.8780330">[IEEE]</a>
         </li>
         <p class="" style="margin: 5px;"></p>
         <li>
             <strong>Association Likelihoods for Directional Estimation</strong><br>
-             Florian Pfaff, <u>Kailai Li</u>, Uwe D. Hanebeck<br>
+             Florian Pfaff, Kailai Li, Uwe D. Hanebeck<br>
             <em>Proceedings of the 2019 IEEE International Conference on Industrial Cyber Physical Systems (ICPS)</em>, Taipei, Taiwan <a href="https://doi.org/10.1109/ICPHYS.2019.8780240">[IEEE]</a>
         </li>
         <p class="" style="margin: 5px;"></p>
         <li>
             <strong>Variable Step-Size Discrete Dynamic Programming for Vehicle Speed Trajectory Optimization</strong><br>
-             Ziqi Ye, <u>Kailai Li</u>, Michael Stapelbroek, Rene Savelsberg, Marco Günther, Stefan Pischinger<br>
+             Ziqi Ye, Kailai Li, Michael Stapelbroek, Rene Savelsberg, Marco Günther, Stefan Pischinger<br>
             <em>IEEE Transactions on Intelligent Transportation Systems</em>, vol. 20, no. 2, pp. 476-484, Feb. 2019 <a href="https://doi.org/10.1109/TITS.2018.2812921">[IEEE]</a>
         </li>
 
         <p style="text-decoration:underline;text-decoration-thickness:3px"><strong>2018</strong></p>
         <li>
             <strong>Nonlinear Progressive Filtering for SE(2) Estimation</strong><br>
-            <u>Kailai Li</u>, Gerhard Kurz, Lukas Bernreiter, Uwe D. Hanebeck<br>
+            Kailai Li, Gerhard Kurz, Lukas Bernreiter, Uwe D. Hanebeck<br>
             <em>Proceedings of the 2018 21st International Conference on Information Fusion (FUSION)</em>, Cambridge, United Kingdom <a href="https://doi.org/10.23919/ICIF.2018.8455231">[IEEE]</a>
         </li>
         <p class="" style="margin: 5px;"></p>
         <li>
             <strong>Simultaneous Localization and Mapping Using a Novel Dual Quaternion Particle Filter</strong><br>
-            <u>Kailai Li</u>, Gerhard Kurz, Lukas Bernreiter, Uwe D. Hanebeck<br>
+            Kailai Li, Gerhard Kurz, Lukas Bernreiter, Uwe D. Hanebeck<br>
             <em>Proceedings of the 2018 21st International Conference on Information Fusion (FUSION)</em>, Cambridge, United Kingdom <a href="https://doi.org/10.23919/ICIF.2018.8455347">[IEEE]</a>
         </li>
         <p class="" style="margin: 5px;"></p>
         <li>
         <strong>Wavefront Orientation Estimation Based on Progressive Bingham Filtering</strong><br>
-         <u>Kailai Li</u>, Daniel Frisch, Susanne Radtke, Benjamin Noack, Uwe D. Hanebeck<br>
+         Kailai Li, Daniel Frisch, Susanne Radtke, Benjamin Noack, Uwe D. Hanebeck<br>
         <em>Proceedings of the 2018 IEEE ISIF Workshop on Sensor Data Fusion: Trends, Solutions, Applications (SDF)</em>, Bonn, Germany <a href="https://doi.org/10.1109/SDF.2018.8547094">[IEEE]</a>
         </li>
         <p class="" style="margin: 50px;"></p>
