--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
      <br>
         <span style="color:darkblue;font-size:15px;">I lead the <span style="color:darkred;font-weight:bold;">Agile Sensing and Intelligence Group <a href="https://asig-x.github.io/">(ASIG)</a></span> working in the field of autonomous systems and robotics. We constantly look for strong candidates for PhD/postdoc/internship/thesis. Shoot me an email with a brief intro if you are interested, and we will start from this!</span></p>
         
-        <span style="color:darkblue;font-size:15px;">If you intend to apply for CSC scholarship and join us, please directly contact me.</span></p>
+        <span style="color:darkblue;font-size:15px;">If you intend to apply for CSC scholarship (or others) and join us, please directly contact me.</span></p>
         
         <span style="color:darkblue;font-size:15px;">Check out our current <span style="font-weight:bold;"><a href="https://www.rug.nl/about-ug/work-with-us/job-opportunities/?details=00347-02S000AS5P">PhD position in Multisensory Autonomy for Intelligent Mobile Systems </a></span> at Bernoulli Institute of University of Groningen!</span></p>
     <br>
    <span style="color:darkgreen;font-size:15px;font-weight:bold;">== News ==</span>
     <ul>
         <li>
-        2024-05: One PhD position is available in <a href="https://www.rug.nl/about-ug/work-with-us/job-opportunities/?details=00347-02S000AS5P">Multisensory Autonomy for Intelligent Mobile Systems</a>. Application is due on 01-June, 2024.<br>
+        2024-05: One PhD position is available in <a href="https://www.rug.nl/about-ug/work-with-us/job-opportunities/?details=00347-02S000AS5P">Multisensory Autonomy for Intelligent Mobile Systems</a>. Application is due on June-12, 2024.<br>
         </li>
         <li>
         2024-04: We have now launched our group account on Github under <a href="https://github.com/ASIG-X">ASIG-X</a>.  Our future opensource projects will be released here exclusively. Stay tuned!<br>
