--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
      <br>
         <span style="color:darkblue;font-size:15px;">I lead the <span style="color:darkred;font-weight:bold;">Agile Sensing and Intelligence Group <a href="https://asig-x.github.io/">(ASIG)</a></span> working in the field of autonomous systems and robotics. We constantly look for strong candidates for PhD/postdoc/internship/thesis. Shoot me an email with a brief intro if you are interested, and we will start from this!</span></p>
         
-        <span style="color:darkblue;font-size:15px;">If you intend to apply for CSC scholarship (or others) and join us, please directly contact me.</span></p>
+        <span style="color:darkblue;font-size:15px;">If you intend to apply for CSC scholarship (or other external funds) and join us, please directly contact me.</span></p>
         
         <span style="color:darkblue;font-size:15px;">Check out our current <span style="font-weight:bold;"><a href="https://www.rug.nl/about-ug/work-with-us/job-opportunities/?details=00347-02S000AS5P">PhD position in Multisensory Autonomy for Intelligent Mobile Systems </a></span> at Bernoulli Institute of University of Groningen!</span></p>
     <br>
