--- a/index.html
+++ b/index.html
@@ -256,28 +256,27 @@
     <h3 id="services"> Academic Services </h3>
     <ul>
         <li>
-            <strong>Review for conferences</strong><br>
-            IEEE International Conference on Robotics and Automation (ICRA 2022 & 2023)<br>
-            IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS 2021)<br>
-            IEEE Conference on Decision and Control (CDC 2023)<br>
-            IEEE International Conference on Multisensor Fusion and Integration for Intelligent Systems (MFI 2019-2022)<br>
-            Robotics: Science and Systems (RSS 2019)<br>
-            European Control Conference (ECC 2019-2022)<br>
-            IFAC World Congress (IFAC 2020 & 2023)<br>
-            International Conference on Information Fusion (FUSION 2018-2023)<br>
+            <strong>Review for journals</strong><br>
+            IEEE Robotics and Automation Letters, 
+            IEEE Control Systems Letters, 
+            IEEE Transactions on Pattern Analysis and Machine Intelligence, 
+            IEEE Transactions on Automatic Control, 
+            IEEE Transactions on Intelligent Transportation Systems, 
+            IEEE Transactions on Aerospace and Electronic Systems, 
+            IEEE Journal of Indoor and Seamless Positioning and Navigation
+            Journal of Field Robotics, Statistics and Computing
         </li>
         <p class=""style="margin:5px;"></p>
         <li>
-            <strong>Review for journals</strong><br>
-            IEEE Robotics and Automation Letters (comparably more regular, >10 papers)<br>
-            IEEE Control Systems Letters<br>
-            IEEE Transactions on Pattern Analysis and Machine Intelligence<br>
-            IEEE Transactions on Automatic Control<br>
-            IEEE Transactions on Intelligent Transportation Systems<br>
-            IEEE Transactions on Aerospace and Electronic Systems<br>
-            IEEE Journal of Indoor and Seamless Positioning and Navigation<br>
-            Journal of Field Robotics<br>
-            Statistics and Computing<br>
+            <strong>Review for conferences</strong><br>
+            IEEE International Conference on Robotics and Automation (ICRA), 
+            IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS), 
+            Robotics: Science and Systems (RSS), 
+            IEEE Conference on Decision and Control (CDC), 
+            European Control Conference (ECC), 
+            IFAC World Congress (IFAC), 
+            IEEE International Conference on Multisensor Fusion and Integration for Intelligent Systems (MFI), 
+            International Conference on Information Fusion (FUSION)
         </li>
         <p class=""style="margin:5px;"></p>
         <li><strong>Program committee</strong><br>
