--- a/index.html
+++ b/index.html
@@ -256,27 +256,31 @@
     <h3 id="services"> Academic Services </h3>
     <ul>
         <li>
-            <strong>Review for journals</strong><br>
-            IEEE Robotics and Automation Letters, 
-            IEEE Control Systems Letters, 
-            IEEE Transactions on Pattern Analysis and Machine Intelligence, 
-            IEEE Transactions on Automatic Control, 
-            IEEE Transactions on Intelligent Transportation Systems, 
-            IEEE Transactions on Aerospace and Electronic Systems, 
-            IEEE Journal of Indoor and Seamless Positioning and Navigation
-            Journal of Field Robotics, Statistics and Computing
+            <p style="text-align:justify">
+                <strong>Review for journals</strong><br>
+                IEEE Robotics and Automation Letters, 
+                IEEE Control Systems Letters, 
+                IEEE Transactions on Pattern Analysis and Machine Intelligence, 
+                IEEE Transactions on Automatic Control, 
+                IEEE Transactions on Intelligent Transportation Systems, 
+                IEEE Transactions on Aerospace and Electronic Systems, 
+                IEEE Journal of Indoor and Seamless Positioning and Navigation
+                Journal of Field Robotics, Statistics and Computing
+            </p>
         </li>
         <p class=""style="margin:5px;"></p>
         <li>
-            <strong>Review for conferences</strong><br>
-            IEEE International Conference on Robotics and Automation (ICRA), 
-            IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS), 
-            Robotics: Science and Systems (RSS), 
-            IEEE Conference on Decision and Control (CDC), 
-            European Control Conference (ECC), 
-            IFAC World Congress (IFAC), 
-            IEEE International Conference on Multisensor Fusion and Integration for Intelligent Systems (MFI), 
-            International Conference on Information Fusion (FUSION)
+            <p style="text-align:justify">
+                <strong>Review for conferences</strong><br>
+                IEEE International Conference on Robotics and Automation (ICRA), 
+                IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS), 
+                Robotics: Science and Systems (RSS), 
+                IEEE Conference on Decision and Control (CDC), 
+                European Control Conference (ECC), 
+                IFAC World Congress (IFAC), 
+                IEEE International Conference on Multisensor Fusion and Integration for Intelligent Systems (MFI), 
+                International Conference on Information Fusion (FUSION)
+            </p>
         </li>
         <p class=""style="margin:5px;"></p>
         <li><strong>Program committee</strong><br>
