--- a/publications/index.html
+++ b/publications/index.html
@@ -32,7 +32,7 @@
     <h3 id="thesis"> Dissertation </h3>
     <ul>
         <strong>On-Manifold Recursive Bayesian Estimation for Directional Domains</strong><br>
-        Kailai Li, <em>PhD Thesis, Department of Informatics, Karlsruhe Institute of Technology, December 2021</em> <a href="materials/Dissertation_Kailai_Li.pdf">[PDF]</a><br>
+        Kailai Li, <em>PhD Thesis, Department of Informatics, Karlsruhe Institute of Technology, December 2021</em> <a href="https://kailaili.github.io/materials/Dissertation_Kailai_Li.pdf">[PDF]</a><br>
         <span style="color:darkviolet;font-weight:bold;">Graded with highest distinction (summa cum laude)</span>
     </ul>
     <h3 id="publications">Peer-Reviewed Publications</h3>
