--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     <p class=""style="margin:20px;"></p>
     <h3 id="supervision"> Supervisions </h3>
     <ul>
-        <a href="https://kailaili.github.io/publications/">See<span style="font-weight:bold;"> People @ ASIG</span> for ongoing supervisions.</a>
+        <a href="https://asig-x.github.io/">See<span style="font-weight:bold;"> People @ ASIG</span> for ongoing supervisions.</a>
     </ul>
 
     <ul>
