--- a/publications/index.html
+++ b/publications/index.html
@@ -18,6 +18,12 @@
     <h3 id="papers"> Preprints </h3>
     <ul>
         <li>
+            <strong>Joint State and Parameter Estimation Using the Partial Errors-in-Variables Principle</strong><br>
+            Peng Liu, Kailai Li, Gustaf Hendeby, Fredrik Gustafsson<br>
+            <em>arXiv preprint</em>, arXiv:2407.01801, 2024 <a href="https://arxiv.org/abs/2407.01801">[arXiv]</a>
+        </li>
+        <p class="" style="margin: 5px;"></p>
+        <li>
             <strong>On Embedding B-Splines in Recursive State Estimation</strong><br>
             Kailai Li<br>
             <em>arXiv preprint</em>, arXiv:2307.00637, 2023 <a href="https://arxiv.org/abs/2307.00637">[arXiv]</a>
