--- a/index.html
+++ b/index.html
@@ -257,8 +257,10 @@
             <p style="text-align:justify">
                 <strong>Review for journals</strong><br>
                 IEEE Robotics and Automation Letters, 
+                IEEE Robotics and Automation Magazine, 
                 IEEE Control Systems Letters, 
                 IEEE Transactions on Pattern Analysis and Machine Intelligence, 
+                IEEE Transactions on Neural Networks and Learning Systems, 
                 IEEE Transactions on Automatic Control, 
                 IEEE Transactions on Intelligent Transportation Systems, 
                 IEEE Transactions on Aerospace and Electronic Systems, 
