--- a/index.html
+++ b/index.html
@@ -97,20 +97,17 @@
         </li>
 </ul>
 <br>
-    <h3>Short Bio</h3>
-    <p style="text-align:justify">I am assitant professor working at the Department of Computer Science at the University of Groningen in the Netherlands. I also collaborate closely with <a href="https://people.isy.liu.se/en/rt/fredrik/">Fredrik Gustafsson</a> at Department of Electrical Engineering of <a href="https://liu.se">Linköping University (LiU) </a>
-        in Sweden, where I was a postdoctoral researcher from 2022-10 to 2024-04. Previously, I was a postdoctoral researcher at the <a href="https://isas.iar.kit.edu">Intelligent Sensor-Actuator-Systems (ISAS) Lab</a>, Institute for Anthropomatics and Robotics,
-        <a href="https://kit.edu">Karlsruhe Institute of Technology (KIT)</a> in Germany, where I obtained my PhD degree in computer science in 2021 under the supervision of <a href="https://isas.iar.kit.edu/Staff_Hanebeck.php">Uwe D. Hanebeck</a>. I received my master's degree in Automation Engineering in 2017 from <a href="https://www.rwth-aachen.de">RWTH Aachen University</a> in Germany, including a master's thesis completed at <a href="https://eth.ch"> ETH Zurich </a> in Switzerland,
-        and my bachelor's degrees in 2014 from <a href="https://www.tsinghua.edu.cn/en"> Tsinghua University</a> (<a href="https://en.wikipedia.org/wiki/Tsinghua_University">Wikipedia</a>) in China.</p>
-    <hr>
-
-    <h3>Research Profile</h3>
+    <h3>About me</h3>
     <p><span style="font-weight:bold;">
         <a href="https://kailaili.github.io/publications/">Publications</a> &nbsp|&nbsp
         <a href="https://kailaili.github.io/projects">Granted Projects</a> &nbsp|&nbsp
         <a href="https://asig-x.github.io/">Ongoing Supervisions</a>
     </span>
     </p>
+    <p style="text-align:justify">I am assitant professor working at the Department of Computer Science at the University of Groningen in the Netherlands. I also collaborate closely with <a href="https://people.isy.liu.se/en/rt/fredrik/">Fredrik Gustafsson</a> at Department of Electrical Engineering of <a href="https://liu.se">Linköping University (LiU) </a>
+        in Sweden, where I was a postdoctoral researcher from 2022-10 to 2024-04. Previously, I was a postdoctoral researcher at the <a href="https://isas.iar.kit.edu">Intelligent Sensor-Actuator-Systems (ISAS) Lab</a>, Institute for Anthropomatics and Robotics,
+        <a href="https://kit.edu">Karlsruhe Institute of Technology (KIT)</a> in Germany, where I obtained my PhD degree in computer science in 2021 under the supervision of <a href="https://isas.iar.kit.edu/Staff_Hanebeck.php">Uwe D. Hanebeck</a>. I received my master's degree in Automation Engineering in 2017 from <a href="https://www.rwth-aachen.de">RWTH Aachen University</a> in Germany, including a master's thesis completed at <a href="https://eth.ch"> ETH Zurich </a> in Switzerland,
+        and my bachelor's degrees in 2014 from <a href="https://www.tsinghua.edu.cn/en"> Tsinghua University</a> (<a href="https://en.wikipedia.org/wiki/Tsinghua_University">Wikipedia</a>) in China.</p>
 
     <p style="text-align:justify">
         My major research interests lie in agile sensing and trustworthy inference in the general domain of understanding physical and cyber-physical systems, with applications to sensor fusion, robotic perception, and learning dynamical systems. I am also interested in developing planning and control methods for uncertain dynamical systems and have the ambition to methodologically unify these aspects through new representations and models with real-world validation. I had the honor to lead the developments of a few open-source real-world robotic systems, including <a href="https://github.com/KIT-ISAS/lili-om">LiLi-OM</a>, a cross-hardware LiDAR-inertial odometry and mapping system,
