--- a/publications/index.html
+++ b/publications/index.html
@@ -47,7 +47,7 @@
         <li>
             <strong>Gaussian Process on the Product of Directional Manifolds</strong><br>
             Ziyu Cao, Kailai Li<br>
-            <em>2024 European Control Conference (ECC)</em>, Stockholm, Sweden (to appear) <a href="https://arxiv.org/abs/2303.06799">[arXiv]</a> <a href="https://github.com/KIT-ISAS/hyperToroidalGP">[code]</a>
+            <em>Proceedings of the 2024 European Control Conference (ECC)</em>, Stockholm, Sweden <a href="https://arxiv.org/abs/2303.06799">[arXiv]</a> <a href="https://ieeexplore.ieee.org/document/10591239">[IEEE]</a> <a href="https://github.com/ASIG-X/hyperToroidalGP">[code]</a>
         </li>
         <p style="text-decoration:underline;text-decoration-thickness:3px"><strong>2023</strong></p>
         <li>
