--- a/index.html
+++ b/index.html
@@ -99,9 +99,10 @@
 <br>
     <h3>About me</h3>
     <p><span style="font-weight:bold;">
-        <a href="https://kailaili.github.io/publications/">Publications</a> &nbsp|&nbsp
+        <a href="https://kailaili.github.io/publications">Publications</a> &nbsp|&nbsp
         <a href="https://kailaili.github.io/projects">Granted Projects</a> &nbsp|&nbsp
-        <a href="https://asig-x.github.io/">Ongoing Supervisions</a>
+        <a href="https://asig-x.github.io/">PhD Supervision</a> &nbsp|&nbsp
+        <a href="https://kailaili.github.io/theses">Supervised Bachelor's & Master's Theses</a>
     </span>
     </p>
     <p style="text-align:justify">I am assitant professor working at the Department of Computer Science at the University of Groningen in the Netherlands. I also collaborate closely with <a href="https://people.isy.liu.se/en/rt/fredrik/">Fredrik Gustafsson</a> at Department of Electrical Engineering of <a href="https://liu.se">Linköping University (LiU) </a>
