--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <strong>TSRT78: Digital Signal Processing</strong> (2022 & 2023)<br>
             Master’s course at the Department of Electrical Engineering, Linköping University
              <a href="https://www.rt.isy.liu.se/student/tsrt78">[link]</a><br>
-            <em>Examiner and lecturer</em>. See also my self-written lecture manuscript <a href="materials/lecture_manuscript_tsrt78.pdf">[PDF]</a><br>
+            <em>Examiner and lecturer</em>. See also my self-written lecture manuscript <a href="materials/tsrt78.pdf">[PDF]</a><br>
             <span style="color:darkviolet;font-weight:bold;">Highest course evaluation recorded for TSRT78 since 2018 by students</span>
         </li>
         <p class=""style="margin:5px;"></p>
