--- a/publications/index.html
+++ b/publications/index.html
@@ -54,7 +54,7 @@
         <li>
             <strong> Continuous-Time Ultra-Wideband-Inertial Fusion </strong><br>
             Kailai Li, Ziyu Cao, Uwe D Hanebeck <br>
-            <em>IEEE Robotics and Automation Letters</em>, vol. 8, no. 7, pp. 4338-4345, July 2023 <a href="https://arxiv.org/abs/2301.09033">[arXiv]</a> <a href="https://doi.org/10.1109/LRA.2023.3281932">[IEEE]</a> <a href="https://www.youtube.com/watch?v=v9bbcskwPnw">[video]</a> <a href="https://github.com/ASIG-X/SFUISE">[code and data]</a> <a href="materials/SFUISE_ICRA24_poster">[poster]</a>
+            <em>IEEE Robotics and Automation Letters</em>, vol. 8, no. 7, pp. 4338-4345, July 2023 <a href="https://arxiv.org/abs/2301.09033">[arXiv]</a> <a href="https://doi.org/10.1109/LRA.2023.3281932">[IEEE]</a> <a href="https://www.youtube.com/watch?v=v9bbcskwPnw">[video]</a> <a href="https://github.com/ASIG-X/SFUISE">[code and data]</a> <a href="https://kailaili.github.io/materials/SFUISE_ICRA24_poster">[poster]</a>
         </li>
 
         <p style="text-decoration:underline;text-decoration-thickness:3px"><strong>2022</strong></p>
