--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
    <span style="color:darkgreen;font-size:15px;font-weight:bold;">== News ==</span>
     <ul>
         <li>
+        2024-09: Our group is featured on University Newspaper Groningen (Ukrant). Check it out <span style="font-weight:bold;"><a href="https://ukrant.nl/magazine/from-super-observers-to-bionic-legs-the-robot-factory-at-the-ug/?lang=en">here</a></span>.
+        </li>
+        <li>
         2024-05: One PhD position is available in <a href="https://www.rug.nl/about-ug/work-with-us/job-opportunities/?details=00347-02S000AS5P">Multisensory Autonomy for Intelligent Mobile Systems</a>. Application is due on June-12, 2024.<br>
         </li>
         <li>
