added news page

--- a/index.html
+++ b/index.html
@@ -54,51 +54,7 @@
         
         <span style="color:darkblue;font-size:15px;">If you intend to apply for external funds (e.g., CSC scholarship) and join us, please directly contact me.</span></p>        
     <br>
-   <span style="color:darkgreen;font-size:15px;font-weight:bold;">== News ==</span>
-    <ul>
-        <li>
-        2024-09: Our group is featured on University Newspaper Groningen (Ukrant). Check it out <span style="font-weight:bold;"><a href="https://ukrant.nl/magazine/from-super-observers-to-bionic-legs-the-robot-factory-at-the-ug/?lang=en">here</a></span>.
-        </li>
-        <li>
-        2024-05: One PhD position is available in <a href="https://www.rug.nl/about-ug/work-with-us/job-opportunities/?details=00347-02S000AS5P">Multisensory Autonomy for Intelligent Mobile Systems</a>. Application is due on June-12, 2024.<br>
-        </li>
-        <li>
-        2024-04: We have now launched our group account on Github under <a href="https://github.com/ASIG-X">ASIG-X</a>.  Our future opensource projects will be released here exclusively. Stay tuned!<br>
-        </li>    
-        <li>
-        2024-03: I received a job offer from the <strong>University of Groningen</strong> as tenure-track assistant professor at the Bernoulli Institute for Mathematics, Computer Science and Artificial Intelligence. I <span style="color:darkviolet;font-size:15px;font-weight:bold;">accepted</span> this offer.<br>
-        </li>    
-      	<li>
-        2024-03: I received a job offer from <strong>Linköping University</strong> as assistant professor (tenure track) at the Department of Electrical Engineering funded by WASP (see <a href="#projects">below</a>), and I <strong>declined</strong> it. <br>
-        </li>  
-    	<li>
-        2024-02/03: I received a job offer from <strong>TU Delft</strong> as assistant professor (academic career track) at the Faculty of Mechanical Engineering. I <strong>declined</strong> it.<br>
-        </li>
-        <li>
-        2024-02: Ziyu has a paper accepted at 2024 European Control Conference (ECC) about Gaussian processes on the hypertorus <a href="https://arxiv.org/abs/2303.06799">[link]</a>. See you in Stockholm!<br>
-        </li>
-        <li>
-        2023-11: I have given a talk at the University of Groningen <a href="https://www.rug.nl/research/bernoulli/calendar/colloquia/mathematics-colloquia-oriented/2023/2023/20231108-kailai-li">[link]</a>.<br>
-        </li>
-        <li>
-        2023-10: I have received a <strong>ZENITH grant</strong> <a href="https://zenith.lith.liu.se/projects/">[link]</a>. Check out our <a href="zenith-casiis/"> project page</a>!<br>
-        </li>
-        <li>
-        2023-10: I have given a talk at the Nordic Navigation Workshop.<br>
-        </li>
-        <li>
-        2023-10: I have given a talk online at the Bernoulli Institute for Mathematics, Computer Science and Artificial Intelligence, University of Groningen.<br>
-        </li>
-        <li>
-        2023-08: Our paper ''Weighted Total Least Squares for Quadratic Errors-in-Variable Regression'' has been accepted by the 31st European Signal Processing Conference (EUSIPCO) and selected as <strong>Best Student Paper Finalist</strong> <a href="http://eusipco2023.org/best_student_paper_contest.html">[link]</a>.<br>
-        </li>
-        <li>
-        2023-07: Check out my new manuscript on embedding B-splines in recursive state estimation <a href="https://arxiv.org/abs/2307.00637">[arXiv]</a>.<br>
-        </li>
-        <li>
-        2023-06: Our paper '' Continuous-Time Ultra-Wideband-Inertial Fusion'' has been published on RA-L. We have presented the first systematic sensor fusion framework using quaternion-based cumulative B-splines. Check out our code here <a href="https://github.com/ASIG-X/SFUISE">[GitHub]</a>.<br>
-        </li>
-</ul>
+   <span style="color:darkgreen;font-size:15px;font-weight:bold;">Check out news >></span><span style="font-weight:bold;"><a href="https://kailaili.github.io/news"> Link</a></span>
 <br>
     <h3>About me</h3>
     <p><span style="font-weight:bold;">
