--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
                     <p><span style="color:black;font-size:15px;">University of Groningen, The Netherlands</span></p>
                     <p><span style="color:black;font-size:15px;"> Contact: kailai.li [at] rug [dot] nl</span></p>
                     <p><span style="font-weight:bold;">
-                        <a href="https://www.rug.nl/staff/kailai.li/">RUG Page</a> &nbsp|&nbsp
-                        <a href="https://scholar.google.com/citations?user=6ehGZ2sAAAAJ&hl">Google Scholar</a> &nbsp|&nbsp
-                        <a href="https://github.com/kailaili">GitHub</a> &nbsp|&nbsp
-                        <a href="https://www.linkedin.com/in/kailai-li-294657b7">LinkedIn</a> &nbsp|&nbsp
-                        <a href="https://orcid.org/0000-0002-2368-3217">ORCID</a> &nbsp|&nbsp
-                        <a href="https://twitter.com/kailaili1">Twitter</a> &nbsp|&nbsp
-                        <a href="https://www.researchgate.net/profile/Kailai-Li">ResearchGate</a>&nbsp|&nbsp
-                        <a href="https://github.com/ASIG-X">ASIG-X</a>
+                        <a href="https://www.rug.nl/staff/kailai.li/" target="_blank">RUG Page</a> &nbsp|&nbsp
+                        <a href="https://scholar.google.com/citations?user=6ehGZ2sAAAAJ&hl" target="_blank">Google Scholar</a> &nbsp|&nbsp
+                        <a href="https://github.com/kailaili" target="_blank">GitHub</a> &nbsp|&nbsp
+                        <a href="https://www.linkedin.com/in/kailai-li-294657b7" target="_blank">LinkedIn</a> &nbsp|&nbsp
+                        <a href="https://orcid.org/0000-0002-2368-3217" target="_blank">ORCID</a> &nbsp|&nbsp
+                        <a href="https://twitter.com/kailaili1" target="_blank">Twitter</a> &nbsp|&nbsp
+                        <a href="https://www.researchgate.net/profile/Kailai-Li" target="_blank">ResearchGate</a>&nbsp|&nbsp
+                        <a href="https://github.com/ASIG-X" target="_blank">ASIG-X</a>
                         </span>
                     </p>
                 </td>
@@ -54,14 +54,14 @@
         
         <span style="color:darkblue;font-size:15px;">If you intend to apply for external funds (e.g., CSC scholarship) and join us, please directly contact me.</span></p>        
     <br>
-   <span style="color:darkgreen;font-size:15px;font-weight:bold;">Check out news >></span><span style="font-weight:bold;"><a href="https://kailaili.github.io/news"> Link</a></span>
+   <span style="color:darkgreen;font-size:15px;font-weight:bold;">Check out news >></span><span style="font-weight:bold;"><a href="https://kailaili.github.io/news" target="_blank"> Link</a></span>
 <br>
     <h3>About me</h3>
     <p><span style="font-weight:bold;">
-        <a href="https://kailaili.github.io/publications">Publications</a> &nbsp|&nbsp
-        <a href="https://kailaili.github.io/projects">Granted Projects</a> &nbsp|&nbsp
-        <a href="https://asig-x.github.io/">PhD Supervision</a> &nbsp|&nbsp
-        <a href="https://kailaili.github.io/theses">Supervised Bachelor's & Master's Theses</a>
+        <a href="https://kailaili.github.io/publications" target="_blank">Publications</a> &nbsp|&nbsp
+        <a href="https://kailaili.github.io/projects" target="_blank">Granted Projects</a> &nbsp|&nbsp
+        <a href="https://asig-x.github.io/" target="_blank">PhD Supervision</a> &nbsp|&nbsp
+        <a href="https://kailaili.github.io/theses" target="_blank">Supervised Bachelor's & Master's Theses</a>
     </span>
     </p>
     <p style="text-align:justify">I am assitant professor working at the Department of Computer Science at the University of Groningen in the Netherlands. I also collaborate closely with <a href="https://people.isy.liu.se/en/rt/fredrik/">Fredrik Gustafsson</a> at Department of Electrical Engineering of <a href="https://liu.se">Linköping University (LiU) </a>
@@ -81,21 +81,21 @@
         <li>
             <strong>WMCS040-05: Robotic State Estimation</strong> (Semester 1A, from academic year 2024-2025)<br>
             Master’s course in Computer Science, University of Groningen
-             <a href="https://ocasys.rug.nl/2024-2025/catalog/course/WMCS040-05">[link]</a><br>
+             <a href="https://ocasys.rug.nl/2024-2025/catalog/course/WMCS040-05" target="_blank">[link]</a><br>
             <em>Course coordinator, examiner and lecturer</em> <span style="color:darkviolet;font-weight:bold;"> (new course) </span>
         </li>
         <p class=""style="margin:5px;"></p>
         <li>
             <strong>WMCS041-05: Multimodal Mobile Sensing</strong> (Semester 2A, from academic year 2024-2025)<br>
             Master’s course in Computer Science, University of Groningen
-             <a href="https://ocasys.rug.nl/2024-2025/catalog/course/WMCS041-05">[link]</a><br>
+             <a href="https://ocasys.rug.nl/2024-2025/catalog/course/WMCS041-05" target="_blank">[link]</a><br>
             <em>Course coordinator, examiner and lecturer</em> <span style="color:darkviolet;font-weight:bold;"> (new course) </span>
         </li>
         <p class=""style="margin:5px;"></p>
         <li>
             <strong>WMCS042-05: Intelligent Mobile Perception in Practice </strong> (Semester 1B & 2B, from academic year 2024-2025)<br>
             Master’s course in Computer Science, University of Groningen
-             <a href="https://ocasys.rug.nl/2024-2025/catalog/course/WMCS042-05">[link]</a><br>
+             <a href="https://ocasys.rug.nl/2024-2025/catalog/course/WMCS042-05" target="_blank">[link]</a><br>
             <em>Course coordinator, examiner and lecturer</em> <span style="color:darkviolet;font-weight:bold;"> (new course) </span>
         </li>
     </ul>
@@ -104,15 +104,15 @@
         <li>
             <strong>TSRT78: Digital Signal Processing</strong> (2022 & 2023)<br>
             Master’s course at the Department of Electrical Engineering, Linköping University
-             <a href="https://www.rt.isy.liu.se/student/tsrt78">[link]</a><br>
-            <em>Examiner and lecturer</em>. See also my self-written lecture manuscript <a href="materials/tsrt78.pdf">[PDF]</a><br>
+             <a href="https://www.rt.isy.liu.se/student/tsrt78" target="_blank">[link]</a><br>
+            <em>Examiner and lecturer</em>. See also my self-written lecture manuscript <a href="materials/tsrt78.pdf" target="_blank">[PDF]</a><br>
             <span style="color:darkviolet;font-weight:bold;">Highest course evaluation recorded for TSRT78 since 2018 by students</span>
         </li>
         <p class=""style="margin:5px;"></p>
         <li>
             <strong>Localization of Mobile Agents</strong> (2019-2022)<br>
             Master’s course at the Deparment of Informatics, Karlsruhe Institute of Technology<br>
-            <em>Teaching assistant</em> for four consecutive years.</a> See also my slides for post-exercise sessions <a href="materials/LMA22.pdf">[PDF]</a>
+            <em>Teaching assistant</em> for four consecutive years.</a> See also my slides for post-exercise sessions <a href="materials/LMA22.pdf" target="_blank">[PDF]</a>
         </li>
         <p class=""style="margin:5px;"></p>
         <li>
@@ -134,19 +134,19 @@
         <p class=""style="margin:5px;"></p>
         <li>
             <strong>Bachelor’s and master’s theses</strong> (2018-2021)<br>
-            Supervisor of 15 students at the Deparment of Informatics, Karlsruhe Institute of Technology <a href="materials/supervised_theses.pdf">[full list]</a>
+            Supervisor of 15 students at the Deparment of Informatics, Karlsruhe Institute of Technology <a href="materials/supervised_theses.pdf" target="_blank">[full list]</a>
         </li>
     </ul>
     <hr>
         
     <h3 id="award"> Awards </h3>
         <ul>
-            <li> 2023: Best Student Paper Finalist at the 31st European Signal Processing Conference, EUSIPCO 2023 <a href="http://eusipco2023.org/best_student_paper_contest.html">[link]</a> </li>
-            <li> 2022: Jean-Pierre Le Cadre Best Paper Award: First Runner-Up by the International Society for Information Fusion (ISIF) at FUSION 2022 <a href="https://isas.iar.kit.edu/pdf/award/FUSION2022_BEST_PAPER_AWARD_FIRST_RUNNER_UP.pdf">[link]</a> </li>
+            <li> 2023: Best Student Paper Finalist at the 31st European Signal Processing Conference, EUSIPCO 2023 <a href="http://eusipco2023.org/best_student_paper_contest.html" target="_blank">[link]</a> </li>
+            <li> 2022: Jean-Pierre Le Cadre Best Paper Award: First Runner-Up by the International Society for Information Fusion (ISIF) at FUSION 2022 <a href="https://isas.iar.kit.edu/pdf/award/FUSION2022_BEST_PAPER_AWARD_FIRST_RUNNER_UP.pdf" target="_blank">[link]</a> </li>
             <p class="" style="margin: 2px;"></p>
-            <li> 2021: Best Lab Practical Course “Machine Learning and Intelligent System” by the Department of Informatics, Karlsruhe Institute of Technology <a href="https://isas.iar.kit.edu/pdf/award/Auszeichnung_bestes_Praktikum_SS21.pdf">[link]</a></li>
+            <li> 2021: Best Lab Practical Course “Machine Learning and Intelligent System” by the Department of Informatics, Karlsruhe Institute of Technology <a href="https://isas.iar.kit.edu/pdf/award/Auszeichnung_bestes_Praktikum_SS21.pdf" target="_blank">[link]</a></li>
             <p class="" style="margin: 2px;"></p>
-            <li> 2016 & 2017: IDEA League Research Grant <a href="https://idealeague.org/">[link]</a></li>
+            <li> 2016 & 2017: IDEA League Research Grant <a href="https://idealeague.org/" target="_blank">[link]</a></li>
             <p class="" style="margin: 2px;"></p>
             <li> 2017: Dean's List RWTH Aachen for top 5% students with outstanding academic result</li>
             <p class="" style="margin: 2px;"></p>
@@ -226,7 +226,7 @@
             <li>
                 <strong>Rigid Body Motion Estimation Based on Directional Statistics</strong><br>
                 Virtual Symposium on Directional Statistics<br>
-                November 2020, Karlsruhe Institute of Technology <a href="https://isas.iar.kit.edu/de/1435.php">[link]</a> <a href="https://www.youtube.com/watch?v=hxT33qHFc2Y">[video]</a>
+                November 2020, Karlsruhe Institute of Technology <a href="https://isas.iar.kit.edu/de/1435.php" target="_blank">[link]</a> <a href="https://www.youtube.com/watch?v=hxT33qHFc2Y" target="_blank">[video]</a>
             </li>
         </ul>
         <hr>
